--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-matplotlib
-seaborn
-quantstats
-tqdm
-pandas
-numpy
+jupyterlab==2.0.1
+pipdeptree==0.13.2
+QuantStats==0.0.25
+tqdm==4.43.0
+wheel==0.34.2
