BLD: Update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
-QuantStats
-tqdm
-xlrd
-pandas
-numpy
+QuantStats==0.0.25
+certifi==2020.4.5.1
+chardet==3.0.4
+cycler==0.10.0
+idna==2.9
+kiwisolver==1.2.0
+matplotlib==3.2.1
+multitasking==0.0.9
+numpy==1.18.3
+pandas==1.0.3
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.23.0
+scipy==1.4.1
+seaborn==0.10.0
+six==1.14.0
+tabulate==0.8.7
+tqdm==4.45.0
+urllib3==1.25.9
+xlrd==1.2.0
+yfinance==0.1.54
