--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 QuantStats==0.0.25
+beautifulsoup4==4.9.0
 certifi==2020.4.5.1
 chardet==3.0.4
 cycler==0.10.0
 idna==2.9
 kiwisolver==1.2.0
+lxml==4.5.0
 matplotlib==3.2.1
 multitasking==0.0.9
 numpy==1.18.3
+requests==2.23.0
 pandas==1.0.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
